# SI_projekt_pytorch

./: DL.py  Kod.ipynb  Kod2.ipynb  OpisZbioruDanych.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  dane.txt  main.py  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb
dokumentacja/: Szablon sprawozdania.docx  teoria_glebokie_sieci_v2.docx  zrodla.txt  zrodla2.txt
eksperymenty_kod/: eksperyment_k1.ipynb  eksperyment_k1_k2.ipynb  eksperyment_k2.ipynb  eksperyment_l_warstw.ipynb  eksperyment_lr.ipynb
eksperymenty_kod/.ipynb_checkpoints/: eksperyment_f_aktywacji-checkpoint.ipynb  eksperyment_k1-checkpoint.ipynb  eksperyment_k2-checkpoint.ipynb  eksperyment_l_warstw-checkpoint.ipynb  eksperyment_lr-checkpoint.ipynb
